--- a/core/frontend/src/App.css
+++ b/core/frontend/src/App.css
@@ -45,6 +45,43 @@ body {
 
 .mediainput {
   width: 100%;
+  background-color: white;
+  color: black;
+  opacity: 1;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.mediainput:disabled {
+  font-style: italic;
+  background-color: white;
+  color: black;
+  opacity: 1;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.mediaoptions {
+  width: 100%;
+  background-color: white;
+  border-width: 0px 1px 1px 1px;
+  border-style: solid;
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.mediaoptions ul {
+  list-style-type: none;
+  padding: 0px;
+}
+
+.mediaoptions li {
+  padding-left: 5px;
+  cursor: pointer;
+}
+
+.mediaoptions li:hover {
+  background-color: var(--emph-color);
 }
 
 #submit {
@@ -54,6 +91,7 @@ body {
 
 #tropescontainer {
   margin: 20px;
+  margin-bottom: 80px;
   grid-column: 2;
 }
 
@@ -61,14 +99,17 @@ body {
   font-weight: normal;
   font-style: italic;
   font-size: xx-large;
+  margin-bottom: 0.5em;
+  line-height: 1.15;
 }
 
 #tropes {
-  column-width: 250px;
+  column-width: 200px;
   column-gap: 10px;
   break-inside: avoid;
 }
 
 :root {
   --main-bg-color: #f9f9f9;
+  --emph-color: #e3e3e3;
 }
