--- a/core/templates/core/index_react.html
+++ b/core/templates/core/index_react.html
@@ -2,15 +2,21 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>django + vite + react + typescript index</title>
-  {% vite_hmr_client %}
-  {% vite_react_refresh %}
-  {% vite_asset 'src/main.tsx' %}
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>django + vite + react + typescript index</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    {% vite_hmr_client %} 
+    {% vite_react_refresh %} 
+    {% vite_asset 'src/main.tsx' %}
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
