--- a/core/frontend/src/App.css
+++ b/core/frontend/src/App.css
@@ -37,6 +37,10 @@ body {
 }
 
 #about {
+  padding: unset;
+  background-color: unset;
+  color: unset;
+  border: unset;
   padding-bottom: 0.1em;
 }
 
@@ -72,9 +76,13 @@ body {
 }
 
 .clearinput {
+  background-color: unset;
+  color: unset;
+  padding: 0px 6px;
+  border: unset;
   position: absolute;
   top: 0.3em;
-  right: 6px;
+  right: 0;
 }
 
 .clearinput:hover {
@@ -95,8 +103,14 @@ body {
   text-overflow: ellipsis;
 }
 
+.flatbottom {
+  border-radius: 4px 4px 0px 0px;
+}
+
 .mediainput::placeholder {
   font-style: italic;
+  color: var(--text);
+  opacity: 0.5;
 }
 
 .mediainput:disabled {
@@ -115,7 +129,7 @@ body {
   border-style: solid;
   max-height: 300px;
   overflow-y: scroll;
-  border-radius: 4px;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .mediaoptions ul {
@@ -145,8 +159,8 @@ body {
   margin-top: 10px;
   width: max-content;
   border: 1px solid var(--text);
-  border-radius: calc(1em + 1px);
-  padding: 0.25em 10px;
+  border-radius: calc(0.75em + 1px);
+  padding: 0px 10px;
 }
 
 #submit:hover {
